- Fix MDEV-7616 by adding SQLCOM_SET_OPTION to the accepted command list. modified:   storage/connect/ha_connect.cc

- Add new JSON UDF functions and JSON functionalities.
modified:
  storage/connect/json.cpp
  storage/connect/json.h
  storage/connect/jsonudf.cpp
  storage/connect/tabjson.cpp